# k8s-github-package-test

./: Dockerfile  README.md
.github/workflows/: deploy-image.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/api/: main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.tsx  entry-client.tsx
k8s/: delete_env.sh  dockerconfig-secret.yaml  k8s-github-package-test-backend.yaml  k8s-github-package-test-frontend.yaml  k8s-github-package-test.yaml  set_env.sh
